# 2024-HL-GeoCL

./: .gitignore  Bibhuti_FDL_colab_github_demo.ipynb  FDL_colab_github_demo_india.ipynb  FDL_colab_github_demo_opal_issan.ipynb  LICENSE  README.md  dagger_splits.ipynb  format_and_lint.sh  nrt_timeline.yml  pyproject.toml  requirements.txt  test.ipynb
2020-FDL-X-Geo/: .gitignore  Assign_density_labels.ipynb  README.md  check_fulldata.py  compute_2017_data.py  dataloader.py  experiment.py  experiment.yaml  preprocess.py  preprocess_with_sheath.py  requirements.txt  subset_weimer_storm.py  test_dataloader.py  train.py  train_hyperparametersweep.py  train_multiyear.py  train_script.py
app_dev/: Dockerfile
docs/: sheath.md
feature_vector_extraction/: FEATURE_DESCRIPTIONS.md  README.md  dipole.py  feature_extraction.py  generate_data.py  predict_save.py  save_outputs.py  train_model.py
models/: sheath_best_model_checkpoint_1.pth
notebooks/: test.ipynb
public/: sheath_inference_quickstart.ipynb
scripts/: benchmarking.ipynb  choose_model.ipynb  dagger_splits.ipynb  dipole.py  downlaod_ace_data.py  download_ace_data.py  download_dscovr_data.py  prepare_omnidata.py  pt_scaler.json  realtime_indices.py  rtsw_scalers.ipynb  rtsw_supermag_mapping.ipynb  sheath_best_hyper.yml  sheath_best_hyper_embeded.yml  sheath_feature_vector.py  sheath_feature_vector2.py  sheath_get_best_model.py  sheath_inference.py  sheath_map2sun.py  sheath_sdo_timeindex.py  sheath_sweep_config.yml  sheath_sweep_config_embed.yml  sheath_train.py  sheath_train_best_model.py  sheath_trainingdata.py  (+9 more)
(+250 files in other folders)
