[project]
name = "geocloak"
version = "0.1.0"
description = "GEO-CLoak: Geoeffectiveness Continual Learning"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = "MIT"
dependencies = [
    "numpy<2",
    "matplotlib",
    "pandas",
    "scipy",
    "sympy",
    "torch<2.3",
    "torchvision<0.18",
    "torchtext",
    "pytorch-lightning",
    "scikit-learn",
    "h5py",
    "Pillow",
    "wandb",
    "celluloid",
    "pyproj",
    "tables",
    "astropy",
    "zarr",
    "netCDF4",
    "ppigrf",
]

[project.optional-dependencies]
dev = [
    "black",
    "black[jupyter]",
    "isort",
    "flake8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["geocloak"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
